--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "http": "0.0.1-security",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.2"
   }
